agregando colores y media theme

--- a/src/global.css
+++ b/src/global.css
@@ -6,3 +6,15 @@
 @import "./styles/padding.css";
 @import "./styles/gap.css";
 @import "./styles/scroll.css";
+
+body {
+  background-color: var(--c-white);
+  color: var(--c-black);
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--c-black);
+    color: var(--c-white);
+  }
+}
