--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,10 +1,10 @@
 :root {
-	--c-blue: #a0ebff;
-	--c-purple: #dbceff;
-	--c-red: #ce3131;
-	--c-green: #13b176;
-	--c-gray: #454545;
-	--c-lightgray: #cfcfcf;
-	--c-black: #000000;
-	--c-white: #ffffff;
+  --c-black: #121212;
+  --c-red: #cc241d;
+  --c-green: #98971a;
+  --c-yellow: #d79921;
+  --c-blue: #458588;
+  --c-gray: #928374;
+  --c-lightgray: #cfcfcf;
+  --c-white: #fffff0;
 }
