--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -9,14 +9,9 @@
 	min-width: 0;
 }
 
-html {
-	font-size: 62.5%;
-}
-
 body {
 	-webkit-font-smoothing: antialiased;
 	min-height: 100dvh;
-	font-size: 1.6rem;
 }
 
 img,
@@ -48,4 +43,9 @@ h6 {
 
 p {
 	text-wrap: pretty;
+}
+
+a {
+	color: currentColor;
+	text-decoration: none;
 }
